--- a/app/src/main/res/layout-v28/activity_main.xml
+++ b/app/src/main/res/layout-v28/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:textFontWeight="400"
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
