--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,13 +15,12 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         tools:text="Fact here" />
 
-
     <ProgressBar
-        android:visibility="invisible"
         android:id="@+id/progressBar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="invisible" />
+
 
     <Button
         android:id="@+id/actionButton"
