- 004 NO RETROFIT with BULLSHIT CODE

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.ChuckNorrisFactsAppMVVM" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/browny</item>
-        <item name="colorPrimaryVariant">@color/browny</item>
+        <item name="colorPrimary">@color/cream</item>
+        <item name="colorPrimaryVariant">@color/cream</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
