--- a/app/src/main/res/layout-v28/activity_main.xml
+++ b/app/src/main/res/layout-v28/activity_main.xml
@@ -23,17 +23,17 @@
             android:src="@drawable/chuck" />
 
         <TextView
-            style="@style/text_common"
+            android:textSize="16sp"
+            android:lineHeight="20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_horizontal_large_size"
-            android:fontFamily="@font/sans_pro_bold"
+            android:gravity="center"
             android:text="@string/wanna_get_some_interesting_fact_about_chuck_norris" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/sans_pro_italic"
             android:text="@string/so_press_the_button_then" />
 
     </LinearLayout>
@@ -49,11 +49,9 @@
 
         <TextView
             android:id="@+id/textView"
-            style="@style/text_common"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_horizontal_large_size"
-            android:fontFamily="@font/sans_pro_bold"
             android:gravity="center"
             tools:text="Fact here" />
 
@@ -70,12 +68,11 @@
 
         <Button
             android:id="@+id/actionButton"
-            style="@style/text_common"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_horizontal_large_size"
-            android:background="@drawable/button_radius"
             android:text="@string/get_fact" />
 
     </LinearLayout>
+
+
 </LinearLayout>
