--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="margin_horizontal_large_size">32dp</dimen>
     <dimen name="margin_vertical_medium">10dp</dimen>
+    <dimen name="small_padding">5dp</dimen>
 </resources>
