--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="margin_horizontal_large_size">32dp</dimen>
     <dimen name="margin_vertical_medium">10dp</dimen>
     <dimen name="small_padding">5dp</dimen>
+    <dimen name="medium_size">22sp</dimen>
+    <dimen name="pre_medium_size">18sp</dimen>
+    <dimen name="image_size">70dp</dimen>
 </resources>
