--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/cream"
     android:orientation="vertical"
-    tools:context=".presentation.MainActivity">
+    tools:context="com.example.chucknorrisfactsappmvvm.presentation.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -79,10 +79,10 @@
 
 
         <LinearLayout
+            android:layout_marginTop="@dimen/margin_medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
 
             <ImageButton
                 android:id="@+id/favoriteImageButton"
